[package]
name = "lucent"
version = "1.0.0"
authors = ["LunarCoffee <lunarcoffee2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["unstable", "attributes"] }
futures = "0.3.4"
base64 = "0.12.1"
chrono = "0.4.11"
ctrlc = "3.1.4"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
num_enum = "0.5.0"
pwhash = "0.3.0"
regex = "1.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.12"
