[package]
name = "lucent"
version = "1.2.1"
authors = ["LunarCoffee <lunarcoffee2@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
async-tls = { version = "0.11.0", default-features = false, features = ["server"] }
futures = "0.3.15"
base64 = "0.13.0"
chrono = "0.4.19"
ctrlc = "3.1.9"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
num_enum = "0.5.2"
pwhash = "1.0.0"
regex = "1.5.4"
rustls = "0.19.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
